Target the off-screen class Property: left, Value: -100vw Property: position, Value: absolute Target the skip-link class Property: background, Value: link to the color-black variable Property: color, Value: link to the color-white variable Property: left, Value: 0 Property: padding, Value: .7rem Property: position, Value: fixed Property: opacity, Value: 0 Property: top, Value: 0 Property: z-index, Value: 10 Property: transform, Value: translateY(-1rem) Property: transition, Value: transform .2s ease-in-out, opacity .2s ease-in-out Target the focus state of skip-link class Property: opacity, Value: 1 Property: transform, Value: translateY(0)

--- a/accessibility/skip-links/01-styles.css
+++ b/accessibility/skip-links/01-styles.css
@@ -208,7 +208,7 @@
     transition: transform .2s ease-in-out, opacity .2s ease-in-out;
   }
 
-  .skip-link .focus {
+  .skip-link:focus {
     opacity: 1;
     transform: translateY(0);
   }
